[gd_scene load_steps=14 format=3 uid="uid://cjme6imsja4xo"]

[ext_resource type="Script" uid="uid://c8rpn6sp5ah6b" path="res://Scripts/Menus/resultados.gd" id="1_yvfxy"]
[ext_resource type="Texture2D" uid="uid://b2mqlfi54yb0r" path="res://Sprites/estrelas/estrela0.png" id="2_1i2rr"]
[ext_resource type="PackedScene" uid="uid://cn0yfmj4x3uel" path="res://Scenes/Menus/painel_fundo.tscn" id="2_acucp"]
[ext_resource type="Texture2D" uid="uid://bndlni8mmyrs1" path="res://Sprites/estrelas/estrela1.png" id="3_enhvw"]
[ext_resource type="StyleBox" uid="uid://dolq1wjvg4ca3" path="res://Visual/fundo.tres" id="3_mxs03"]
[ext_resource type="Theme" uid="uid://bujci4me1jles" path="res://Visual/Labels.tres" id="4_08a8k"]
[ext_resource type="Theme" uid="uid://bq6xwlkcamw5v" path="res://Visual/saveBotao.tres" id="4_mxs03"]
[ext_resource type="Texture2D" uid="uid://d1ys2auoxbui" path="res://Sprites/estrelas/estrela2.png" id="4_no05l"]
[ext_resource type="FontFile" uid="uid://dhkcifywklffw" path="res://Visual/Fontes/Mechanical-g5Y5.otf" id="4_p23a5"]
[ext_resource type="Texture2D" uid="uid://cdvjgoe13dtq0" path="res://Sprites/estrelas/estrela3.png" id="5_7xt8f"]
[ext_resource type="Script" uid="uid://bjb4beg5ct1nm" path="res://Visual/teste_botao.gd" id="5_rl5xe"]
[ext_resource type="PackedScene" uid="uid://dp04rhsw40lwt" path="res://Scenes/Menus/menu.tscn" id="12_1i2rr"]
[ext_resource type="Script" uid="uid://b6b1gh82hw2ed" path="res://Scripts/Menus/nextFase.gd" id="13_enhvw"]

[node name="Resultados" type="Control" node_paths=PackedStringArray("voltarBotao", "quantErros", "tempoRestante", "resultado", "estrelasTextura", "botaoProxFase")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvfxy")
voltarBotao = NodePath("voltar")
quantErros = NodePath("Panel/GridContainer/Erros")
tempoRestante = NodePath("Panel/GridContainer/tempo")
resultado = NodePath("Panel/GridContainer/Resultado")
estrelasTextura = NodePath("Panel/GridContainer/TextureRect")
arrayTexturas = Array[Texture2D]([ExtResource("2_1i2rr"), ExtResource("5_7xt8f"), ExtResource("4_no05l"), ExtResource("3_enhvw")])
botaoProxFase = NodePath("Node/ProximaFase")

[node name="painelFundo" parent="." instance=ExtResource("2_acucp")]
layout_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.35
offset_top = -146.0
offset_right = 351.35
offset_bottom = 146.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_mxs03")

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -89.06
offset_right = 105.5
offset_bottom = 149.93979
grow_horizontal = 2
grow_vertical = 2

[node name="TXTErros" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme = ExtResource("4_08a8k")
theme_override_fonts/font = ExtResource("4_p23a5")
text = "Numero total de erros:"
horizontal_alignment = 1

[node name="Erros" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme = ExtResource("4_08a8k")
text = "numero"
horizontal_alignment = 1

[node name="nada" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme = ExtResource("4_08a8k")
horizontal_alignment = 1

[node name="TXTTempo" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme = ExtResource("4_08a8k")
text = "Tempo Restante:"
horizontal_alignment = 1

[node name="tempo" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme = ExtResource("4_08a8k")
text = "tempo"
horizontal_alignment = 1

[node name="nada3" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="TXTResultado" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme = ExtResource("4_08a8k")
text = "Resultado final:"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_1i2rr")
stretch_mode = 2

[node name="Resultado" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme = ExtResource("4_08a8k")
text = "Aprovado!"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_top = 11.21
offset_right = 72.0
offset_bottom = 34.209995
grow_horizontal = 2
theme = ExtResource("4_08a8k")
text = "Relatorio Final"

[node name="voltar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -261.275
offset_top = -34.91501
offset_right = -208.27505
offset_bottom = -9.820007
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_mxs03")
text = "Menu
"
script = ExtResource("5_rl5xe")
carregadorScena = true
scenaCarregar = ExtResource("12_1i2rr")

[node name="PanelEstrelas" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -222.29999
offset_top = -72.5
offset_right = -59.299927
offset_bottom = 72.30499
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_mxs03")

[node name="TXTPontuacao" type="Label" parent="PanelEstrelas"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_right = 44.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("4_08a8k")
text = "Pontuação:"

[node name="Node" type="Node" parent="."]
script = ExtResource("13_enhvw")

[node name="ProximaFase" type="Button" parent="Node"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -145.53
offset_top = -34.91501
offset_right = -15.530029
offset_bottom = -9.820007
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_mxs03")
text = "Proxima Fase "
script = ExtResource("5_rl5xe")

[connection signal="resultadoSignal" from="." to="Node" method="_on_resultados_resultado_signal"]
[connection signal="pressed" from="Node/ProximaFase" to="Node" method="_on_proxima_fase_pressed"]
